src/test/testData/inspections/localPatterns.elambda
data Known() = KnownCtr();
unknownCtr = lam (x) -> case x of { <error descr="Constructor 'UnknownCtr' undefined">UnknownCtr</error>() -> KnownCtr(); };
knownCtr = lam (x) -> case x of { KnownCtr() -> KnownCtr(); };
